# WheelBuilder

./: .gitignore  Package.swift  failed_log.txt  pyproject.toml  runs.json
.github/: copilot-instructions.md
.github/workflows/: anaconda-upload.yml  build_all.yml  build_numpy_android_pr.yml  build_release.yml  build_wheel-master.yml  build_wheel.yml  debug_blosc2.yml  debug_pydantic_core.yml  debug_pynacl.yml  manual_run.yml  weekly_updates-master.yml  weekly_updates.yml
Sources/CiWheels/: CiWheelProtocol.swift  CiWheels.swift  MaturinWheelProtocol.swift
Sources/CiWheels/CIBuildWheel/: Aiohttp.swift  Apsw.swift  Atom.swift  Bcrypt.swift  Bitarray.swift  Blosc2.swift  Cffi.swift  Contourpy.swift  Coverage.swift  Greenlet.swift  Kiwisolver.swift  Lxml.swift  Materialyoucolor.swift  Matplotlib.swift  Msgpack.swift  Netifaces.swift  Numpy.swift  Opencv.swift  Pandas.swift  Pycryptodome.swift  Pymunk.swift  Pynacl.swift  (+5 more)
Sources/PipRepo/: PipRepo.swift
Sources/PlatformInfo/: Arch.swift  Env.swift  Platform.swift  PlatformInfo.swift  SDK.swift
Sources/Tools/: ProcessExtensions.swift  Tools.swift
Sources/WheelBuilder/: WheelBuilder.swift  WheelsToBuild.swift
Sources/WheelBuilderCLI/: WheelBuilderCLI.swift
Sources/WheelBuilderMacros/: WheelBuilderMacro.swift
Tests/WheelBuilderTests/: MaturinWheelTests.swift  WheelBuilderTests.swift
WheelBuilder/: Package.swift
research/: build_kt.py
scripts/: mirror_from_anaconda.py  publish_to_r2.py
src/wheelbuilder/: builder.py  cli.py  protocols.py  registry.py  tools.py
worker/: index.js  wrangler.toml
(+27 files in other folders)
