[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wheelbuilder"
version = "0.1.0"
description = "Build Python wheels for iOS and Android from a curated package list"
requires-python = ">=3.11"

[project.scripts]
wheelbuilder = "wheelbuilder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wheelbuilder*"]
